@@ -1,4 +1,5 @@
 v0.10
+	* ADD : curved road support
 	* FIX : enhance somewhat visibility of selected items (by Chris Browet)
 	* ADD : export OSM files (by Chris Browet)
 	* ADD : support for OSM backgrounds (by Chris Browet)
